<resources>
    <string name="app_name">HiperApp</string>
    <string name="hiperapp">HİPERAPP uygulamamıza hoşgeldiniz! Test boyunca \'tavşan\' resmini gördüğünüzde \'buton\' a basmanız beklenmektedir. 10 dakika sonrasında test sonucunuz ekranda gözükecektir. Başarılar dileriz.</string>

    <string name="genel_degerlendirme_kotu">Genel Değerlendirme</string>
    <string name="aileye_notlar_kotu">Aileye notlar;</string>
    <string name="ogretmen_not_kotu">Öğretmene notlar;</string>
    <string name="tavsiye_kotu">İlgili Kişiye Tavsiye</string>
    <string name="hiperaktif_kotu">Hiperaktivite performansı</string>
    <string name="durustsellik_kotu">Dürtüsellik performansı</string>
    <string name="zamanlama_performans_kotu">Zamanlama performansı</string>
    <string name="dikkat_performans_kotu">Dikkat performansı</string>

    //kötü
    <string name="hiperaktif_detay_kotu">Öğrencimizi buton yakalama oranına ve hızına göre %60 oranında sadece dikkatsizlik gözlenen durum olarak tanımlayabiliriz.</string>
    <string name="durustsellik_detay_kotu">Testin geri kalan bölümünde yanlış yakalamalar ve çeldiricilerde eklendiğinde öğrencimizin zaman içinde dürtüsel yanıtlar dağınık seyretti Birleşik uyarıların ise etkisi Dürtüsellik performansında güçlü şiddette dalgalanma vardır.</string>
    <string name="zamanlama_performans_detay_kotu">Testin ikinci bölümünde karakter gösterimleri hızlandığında zaman içinde zamanlama becerisi dağınık seyretti. Geçen zaman bilgi işlem hızını etkilenmiştir. Görsel uyarıların zamanlama üzerine etkisi olumsuz olmuştur. Bilgi işlem hızı hızlanmıştır. Sesli ve birleşik uyarıların zamanlama üzerine 3.seviyede olduğu için belirgin şekilde DEHB olduğu anlaşılabilir. Bilgi işlem hızı hızlanmaya çalışılmıştır ancak yinede yanlış tıklamalardan kaçınılamamıştır. Zamanlama performansında yüksek şiddette 3.seviyede dalgalanmalar görülmüştür.</string>
    <string name="dikkat_performans_detay_kotu">Testin birinci seviyesinde öğrencinin karakteri yakalama butonuna yanlış tıklamalar yapmıştır. Dikkat performansı geçen zaman içinde güçlü (belirgin) düzeyde bozuldu. Görsel uyarıların dikkat performansı üzerine etkisi güçlü (belirgin) düzeyde olumsuz yönde etki etti. Dikkat performansı belirgin olarak bozuldu. Sesli uyarılar ile birlikte dikkat performansı bozulmuştur. Birleşik (sesli ve görsel uyarıların birlikteliğinde) uyarıların dikkat performansı üzerine etkisi güçlü şiddette ve olumlu yönde olmuştur. Birleşik çeldiriciler dikkati belirgin düzeyde bozmuştur. Öğrencimizin yanlış yakalama oranının 3. Seviyede olduğu anlaşılmıştır. Dikkat performansında güçlü dalgalanmalar görülmüştür.</string>

    <string name="ailedetay_kotu">Öğrencimizin görsel , işitsel uyaranları azaltılmalı. Öğrencimize yeni sevebileceği etkinlikler hobiler bulunmalı. Dikkat süresi kısa olduğu için öğrenciye uzun ödevler,görevler verilmemelidir. Bu testi uyguladıktan sonra öğretmen veya rehberlik servisiyle görüşüp duruma göre uzmanlardan yardım alınabilir.</string>
    <string name="ogretmen_detay_kotu">Öğretmen öğrenciyi sınıftaki etkinliklere dahil etmeye çalışmalı ve gözlem altında tutulmalı. Öğrencimizi rehberlik servisine yönlendirmeli eğer gerek duyuluyorsa uzman kişilerden yardım alınmalı.</string>
    <string name="tavsiye_detay_kotu">Öncelikle testi uygulayan öğrenci bu testi tek başına uyguladıysa, tekrar uygulanmasında fayda vardır. Öğrenci bu testi ikinci defa uyguladığında yanında mutlaka bir öğretmen veya bir veli olması gerekiyor. Öğrencimizin durumunu gözlemlemesin de büyük faydası olacaktır. Eğer ikinciye aynı sonuç veriliyorsa bir uzmana danışılmalıdır. Öğrencimiz Dikkatsizlik semptomları uzun ve sıkıcı görevler üzerinde dikkati yoğunlaştıramama, dikkat dağıtan ögelerden fazlasıyla etkilenme, dalgın, unutkan ve dağınık olma durumlarını gösteriyor. Öğrencimize ilgisi doğrultusunda görevler verilmeli. Öğrencimiz sabırsız olduğu düşünülmektedir. Bundan dolayı öğrencimize ilgilerinin olduğu alanda somut etkinliklerle yardım edilmeli. Öğrencimiz diğer insanlar tarafından yanlış anlaşılabilir. Bu durumda öğrencimizi arkadaşlarıyla kaynaştırma çalışması yapılmalıdır. Öğrencimiz kendisini kontrol etmede güçlük yaşayabilir; diğerler bireyler tarafından umursamaz ve düşüncesiz olarak algılanabilirler. Makul olarak akıl yürütememesi, bazen gereksiz riskler almasına neden olur.Bu sebepten dolayı öğrencimizin gözlem altında olması gerekmektedir.</string>
    <string name="hiperaktivite_kotu">Hiperaktivite: Öğrencinin bedensel olarak verdiği cevapları ve zorlanmayı temsil eder.</string>
    <string name="durustluk_kotu">Dürtüsellik: Öğrencinin acele davranmasını ifade eder. Yakalama butonuna hızlı şekilde basmasıdır.</string>
    <string name="zamanlama_kotu">Zamanlama : Hızlı ve Doğru şekilde öğrencinin ana karakteri yakalayabilmesidir.</string>
    <string name="dikkat_kotu">Dikkat: Öğrencinin ana karakteri doğru şekilde yakalamasıdır.</string>
//orta
    <string name="hiperaktif_detay_orta">Öğrencimizi buton yakalama oranına ve hızına göre %30 olarak hiperaktif-dürtüsel durum olarak tanımlayabiliriz.</string>
    <string name="durustsellik_detay_orta">Testin geri kalan bölümünde yanlış yakalamalar ve çeldiricilerde eklendiğinde öğrencimizin zaman içinde dürtüsel yanıtlar stabil seyretti. Görsel uyarıların dürtüsel yanıtlar üzerinde etkisi olmamıştır. Dürtüsellik performansında sesli uyarıların etkisi olmamıştır. Birleşik uyarıların ise etkisi belirsizdir. Dürtüsellik performansında güçlü şiddette dalgalanma vardır.</string>
    <string name="zamanlama_performans_detay_orta">Testin ikinci bölümünde karakter gösterimleri hızlandığında zaman içinde zamanlama becerisi stabil seyretti. Geçen zaman bilgi işlem hızını etkilememiştir. Görsel uyarıların zamanlama üzerine etkisi olumsuz olmuştur. Bilgi işlem hızı yavaşlamıştır. Sesli ve birleşik uyarıların zamanlama üzerine etkisi olumsuz yönde olmuştur. Bilgi işlem hızı yavaşlamıştır. Zamanlama performansında orta şiddette dalgalanmalar görülmüştür.</string>
    <string name="dikkat_performans_detay_orta">Testin birinci seviyesinde öğrencinin karakteri yakalama butonuna yanlış tıklamalar yapmıştır. Dikkat performansı geçen zaman içinde güçlü (belirgin) düzeyde bozuldu. Görsel uyarıların dikkat performansı üzerine etkisi güçlü (belirgin) düzeyde olumsuz yönde etki etti. Dikkat performansı belirgin olarak bozuldu. Sesli uyarılar ile birlikte dikkat performansı bozulmuştur. Birleşik (sesli ve görsel uyarıların birlikteliğinde) uyarıların dikkat performansı üzerine etkisi güçlü şiddette ve olumlu yönde olmuştur. Birleşik çeldiriciler dikkati belirgin düzeyde bozmuştur. Dikkat performansında güçlü dalgalanmalar görülmüştür.</string>
    <string name="ailedetay_orta">Öğrencimiz odası basit döşenmiş olmalı, görsel uyarılar mümkün olduğunca azaltılmalı. Çalışma masası duvar kenarında olmalı. Çalıştığı ortamda ses (müzik, konuşma vs) ve görsel uyarılar (TV, başka insanlar vs.) olmamalıdır. Dikkat süresini kısa olduğu dikkat olduğu unutulmamalıdır.</string>
    <string name="ogretmen_detay_orta">Öğrencimiz sınıfta görsel ve sesli uyarılardan uzakta, mümkünse ön sırada ve duvar kenarında oturmalı. Zaman ilerledikçe dikkati azaldığından dersin ilk dakikaları öğrenmesi için en uygun zaman dilimi olacaktır. Ayrıca zaman ilerledikçe hareketliliğinde de artış olacağı bilinmelidir.</string>
    <string name="tavsiye_detay_orta">Öğrencimizin odaklanabilmesini uzun süre sürdürememektedir. Ödev, iş, görev süresinin uzun olmaması veya sık dinlenme aralarının verilmesi uygun olabilir. Bulunduğu çevresel koşulların öğrencimizin ihtiyacına göre düzenlenmesi gerekir. Evdeki çalışma ortamının sade, düzenli bir odada olması ve varsa kardeşinin veya televizyonun olmadığı bir odada çalışmalarını yapması dikkatinde olumlu katkı sağlayacaktır. Okulda oturacağı yerin öğretmenine yakın bir konumda oturması, görme alanında diğer arkadaşlarının olmaması odaklanmasını artıracaktır. Odaklanmasını azaltan ve hareketliliğini artıran duygusal süreçlerinde göz önünde bulundurarak desteklenmesi bilişsel işlevlerinin daha iyi olması açısından önemli bir faktördür. </string>

    //normal
    <string name="hiperaktif_detay_normal"> Öğrencimizi buton yakalama oranına ve hızına göre %10 olarak hiperaktif-dürtüsel durum olarak tanımlayabiliriz.</string>
    <string name="durustsellik_detay_normal">Testin geri kalan bölümünde yanlış yakalamalar ve çeldiricilerde eklendiğinde öğrencimizin zaman içinde dürtüsel yanıtlar normal seyretti. Görsel uyarıların dürtüsel yanıtlar üzerinde etkisi olmamıştır. Dürtüsellik performansında sesli uyarıların etkisi olmamıştır. Birleşik uyarıların ise etkisi belirsizdir. Dürtüsellik performansında normal şiddette dalgalanma vardır.</string>
    <string name="zamanlama_performans_detay_normal">Testin ikinci bölümünde karakter gösterimleri hızlandığında zaman içinde zamanlama becerisi yanlış yakalamalara yol açmıştır ancak bu yakalamalar normal seviyede seyretmiştir. Geçen zaman bilgi işlem hızını etkilememiştir. Görsel uyarıların zamanlama üzerine etkisi olumsuz olmuştur. Sesli ve birleşik uyarıların zamanlama üzerine etkisi olumsuz yönde olmuştur. Bilgi işlem hızı yavaşlamıştır. Zamanlama performansında normal şiddette dalgalanmalar görülmüştür.</string>
    <string name="dikkat_performans_detay_normal">Testin birinci seviyesinde öğrencinin karakteri yakalama butonuna doğru yakalamalar yapmıştır. Dikkat performansı geçen zaman içinde normal seyretti.  Görsel uyarıların dikkat performansı üzerine etkisi normal düzeyde etki etti. Dikkat performansında belirgin bozulmalar yaşanmamıştır. Sesli uyarılar ile birlikte dikkat performansı bozulmamıştır. Birleşik (sesli ve görsel uyarıların birlikteliğinde) uyarıların dikkat performansı üzerine etkisi oluşmamıştır. Dikkat performansında normal seviyede seyretmiştir.</string>
</resources>